<resources>
    <string name="app_name">Simple Password Manager</string>
    <string name="name">Name</string>
    <string name="location_site">Location (Site…)</string>
    <string name="password_size">Password Size</string>
    <string name="allow_alphabetical">Allow Alphabetical</string>
    <string name="allow_numerics">Allow Numerics</string>
    <string name="allow_symbols">Allow Symbols</string>
    <string name="chars_in_password">0</string>
    <string name="save_password">Save Password</string>
    <string name="copy_password">Copy Password</string>
    <string name="generate_password">Generate Password</string>
    <string name="local">Local</string>
    <string name="unknown_location">Location not specified</string>
    <string name="delete">Delete this password?</string>
    <string name="are_you_sure_you_want_to_remove_the_password">Are you sure you want to remove the password</string>
    <string name="this_operation_cannot_be_undone">This operation cannot be undone!</string>
    <string name="password">Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="added">added</string>
    <string name="successfully">successfully</string>
    <string name="updated">updated</string>
    <string name="invalid_name">Invalid name. Enter a valid save name.</string>
    <string name="copied">Copied password.</string>
    <string name="unexpected_error">An unexpected error has occurred!</string>
    <string name="enter_your_password">Enter your password to enter the application.</string>
    <string name="create_password">Create a password to enter the application. You can change the
        password later, as long as you don\'t forget it. If you forget it, you will have to delete
        all data, losing all saved passwords!</string>
    <string name="create_password_button">Create password and log in</string>
    <string name="login">Login</string>
    <string name="incorrect_password">Incorrect password. Enter the password correctly.</string>
    <string name="blank_password">The password cannot be blank.</string>
    <string name="new_password">New Password</string>
    <string name="select_boxes">Select one or more boxes above.</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="tap_the_sensor">Tap the biometric sensor to enter the app.</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="be_careful_if_you_forget_your_password_you_will_not_be_able_to_access_the_data_saved_in_the_application">Be careful, if you forget your password you will not be able to access the data saved in the application!</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="repeat_your_new_password">Repeat your new password</string>
    <string name="confirm">Confirm</string>
    <string name="incorrect_old_password">Incorrect old password</string>
    <string name="password_updated_successfully">password updated successfully</string>
    <string name="dialog_password_too_short">Too short. Minimum 4 characters</string>
    <string name="save_an_empty_password">It is not possible to save an empty password</string>
    <string name="no_password_saved">No password saved, click the button below to create one.</string>
    <string name="username">User Name or E-mail</string>
    <string name="username_not_specified">User not specified</string>
    <string name="database_backup">Database Backup</string>
    <string name="database_backup_text">A zip file will be created in the “Documents” folder on your internal storage. In this file there will be a text file containing the encryption password for your database. Be very careful because with this file anyone can access all your passwords, keep it in a safe place. If you lose your encryption key, you will no longer be able to access your saved passwords. Are you sure you want to export your passwords?</string>
    <string name="type_yes_to_confirm">Type \"yes\" to confirm</string>
    <string name="confirm_that_you_understand">Confirm that you understand.</string>
    <string name="restore_database">Restore database</string>
    <string name="database_exported_successfully">Database exported successfully</string>
    <string name="database_restore_text">To restore your passwords click the button below and look for your backup file. Its name was originally \"simple_password_db_backup.zip\".</string>
    <string name="select_file">Select File</string>
    <string name="confirm_restoration">Click confirm below to begin restoring the backup. After the operation you will see a confirmation message. If completed successfully, simply return to the main screen and your data will appear automatically. Any currently saved password will be overwritten by the backup. If you cancel nothing will change.</string>
    <string name="permission_granted">Permission granted, you can proceed.</string>
    <string name="permission_denied">Permission denied. This permission is required to make or restore backups. Grant it to proceed.</string>
    <string name="selected">Selected: %1$s</string>
    <string name="invalid_file">Invalid file. Select the correct backup file.</string>
    <string name="restoration_completed">Restoration Completed</string>
    <string name="select_file_to_continue">Select a file to continue.</string>
</resources>
