<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/tint"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/change_password"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            style="@style/textview"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/be_careful_if_you_forget_your_password_you_will_not_be_able_to_access_the_data_saved_in_the_application"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:paddingStart="10dp"
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingEnd="10dp"
            android:autofillHints="password"
            android:hint="@string/enter_your_old_password"
            android:inputType="textVisiblePassword" />

        <EditText
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:hint="@string/enter_your_new_password"
            android:inputType="textVisiblePassword" />

        <EditText
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:hint="@string/repeat_your_new_password"
            android:inputType="textVisiblePassword" />
    </LinearLayout>
    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginEnd="25dp"/>
    </LinearLayout>

</LinearLayout>