<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/password_generator_layout">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_name"
        style="@style/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:autofillHints="account name"
        android:inputType="textAutoComplete|textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:hint="@string/username"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/local_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_local"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="account local"
            android:hint="@string/location_site"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_password_size"
        style="@style/textview"
        android:text="@string/password_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/local_layout" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar_password_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:max="56"
        app:layout_constraintEnd_toStartOf="@+id/text_chars_in_password"
        app:layout_constraintStart_toEndOf="@id/text_password_size"
        app:layout_constraintTop_toBottomOf="@id/local_layout" />

    <TextView
        android:id="@+id/text_chars_in_password"
        style="@style/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/chars_in_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/seekbar_password_size"
        app:layout_constraintTop_toBottomOf="@id/local_layout" />

    <CheckBox
        android:id="@+id/checkbox_allow_alphabetical"
        style="@style/checkbox"
        android:text="@string/allow_alphabetical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_size" />

    <CheckBox
        android:id="@+id/checkbox_allow_numeric"
        style="@style/checkbox"
        android:layout_marginTop="-5dp"
        android:text="@string/allow_numerics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_allow_alphabetical" />

    <CheckBox
        android:id="@+id/checkbox_allow_symbol"
        style="@style/checkbox"
        android:layout_marginTop="-5dp"
        android:text="@string/allow_symbols"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_allow_numeric" />

    <EditText
        android:id="@+id/edit_generated_password"
        style="@style/edittext"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_allow_symbol"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button_generate_password"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_copy_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9" />

    <TextView
        android:id="@+id/text_button_generate_password"
        style="@style/tint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_password"
        app:layout_constraintBottom_toBottomOf="@id/button_generate_password"
        app:layout_constraintEnd_toEndOf="@id/button_generate_password"
        app:layout_constraintStart_toStartOf="@id/button_generate_password"
        app:layout_constraintTop_toTopOf="@id/button_generate_password" />


    <com.google.android.material.imageview.ShapeableImageView
        style="@style/tint"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:src="@drawable/baseline_create_24"
        app:layout_constraintBottom_toBottomOf="@id/text_button_generate_password"
        app:layout_constraintStart_toEndOf="@id/text_button_generate_password"
        app:layout_constraintTop_toTopOf="@id/text_button_generate_password" />

    <Button
        android:id="@+id/button_copy_password"
        style="@style/button"
        android:paddingStart="05dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_generate_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/text_button_copy_password"
        style="@style/tint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_password"
        app:layout_constraintBottom_toBottomOf="@id/button_copy_password"
        app:layout_constraintEnd_toEndOf="@id/button_copy_password"
        app:layout_constraintStart_toStartOf="@id/button_copy_password"
        app:layout_constraintTop_toTopOf="@id/button_copy_password" />

    <com.google.android.material.imageview.ShapeableImageView
        style="@style/tint"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:paddingTop="2dp"
        android:src="@drawable/baseline_content_copy_24"
        app:layout_constraintBottom_toBottomOf="@id/text_button_copy_password"
        app:layout_constraintStart_toEndOf="@id/text_button_copy_password"
        app:layout_constraintTop_toTopOf="@id/text_button_copy_password" />

    <Button
        android:id="@+id/button_save_password"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_button_save_password"
        style="@style/tint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_password"
        app:layout_constraintBottom_toBottomOf="@id/button_save_password"
        app:layout_constraintEnd_toEndOf="@id/button_save_password"
        app:layout_constraintStart_toStartOf="@id/button_save_password"
        app:layout_constraintTop_toTopOf="@id/button_save_password" />

    <com.google.android.material.imageview.ShapeableImageView
        style="@style/tint"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:src="@drawable/baseline_save_24"
        app:layout_constraintBottom_toBottomOf="@id/text_button_save_password"
        app:layout_constraintStart_toEndOf="@id/text_button_save_password"
        app:layout_constraintTop_toTopOf="@id/text_button_save_password" />

</androidx.constraintlayout.widget.ConstraintLayout>