<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConfigsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tint"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp" />


    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1" />
    <View
        style="@style/view"
        android:layout_width="match_parent"
        android:layout_height=".6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_change_password"/>
    <TextView
        android:id="@+id/text_backup_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database_backup"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_change_password"
        app:layout_constraintVertical_bias=".1" />
    <View
        style="@style/view"
        android:layout_width="match_parent"
        android:layout_height=".6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_backup_database"/>
    <TextView
        android:id="@+id/text_restore_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restore_database"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_backup_database"
        app:layout_constraintVertical_bias=".1" />
    <View
        style="@style/view"
        android:layout_width="match_parent"
        android:layout_height=".6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_restore_database"/>


</androidx.constraintlayout.widget.ConstraintLayout>